--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&display=swap');
 
+@mixin flexCenter {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
 * {
     margin:0;
     padding:0;
@@ -13,11 +19,9 @@ body {
 }
 
 .container {
+    @include flexCenter();
     width:100%;
     height:80vh;
-    display:flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
@@ -32,5 +36,6 @@ body {
 }
 
 footer {
+    @include flexCenter();
     border-top:1px solid red;
 }
