--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,8 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
+  height: 20vh;
   border-top: 1px solid red;
 }
 /*# sourceMappingURL=style.css.map */
