--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,6 +6,11 @@
     justify-content: center;
 }
 
+@mixin size($height) {
+    width:100%;
+    height: $height;
+}
+
 * {
     margin:0;
     padding:0;
@@ -20,8 +25,7 @@ body {
 
 .container {
     @include flexCenter();
-    width:100%;
-    height:80vh;
+    @include size(80vh);
     flex-direction: column;
 }
 
@@ -37,5 +41,6 @@ body {
 
 footer {
     @include flexCenter();
+    @include size(20vh);
     border-top:1px solid red;
 }
