--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Inter', sans-serif;
   text-align: center;
   font-weight: 400;
+  background: #cc81da;
+  background: -webkit-gradient(linear, left bottom, left top, from(#cc81da), color-stop(50%, #9f81da), to(#818fda));
+  background: linear-gradient(0deg, #cc81da 0%, #9f81da 50%, #818fda 100%);
+  color: black;
 }
 
 .container {
@@ -52,6 +56,6 @@ footer {
           justify-content: center;
   width: 100%;
   height: 20vh;
-  border-top: 1px solid red;
+  border-top: 3px dashed #8FDA81;
 }
 /*# sourceMappingURL=style.css.map */
