--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&display=swap');
 
+$primary: black;
+$secondary: #8FDA81;
+
 @mixin flexCenter {
     display:flex;
     align-items: center;
@@ -21,6 +24,9 @@ body {
     font-family: 'Inter', sans-serif;
     text-align: center;
     font-weight: 400;
+    background: rgb(204,129,218);
+    background: linear-gradient(0deg, rgba(204,129,218,1) 0%, rgba(159,129,218,1) 50%, rgba(129,143,218,1) 100%); 
+    color: $primary;
 }
 
 .container {
@@ -42,5 +48,5 @@ body {
 footer {
     @include flexCenter();
     @include size(20vh);
-    border-top:1px solid red;
+    border-top:3px dashed $secondary;
 }
