--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&display=swap');
 
-$primary: black;
+$primary: white;
 $secondary: #8FDA81;
 
 @mixin flexCenter {
