set footer to have fontWeight of 500

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,7 @@ footer {
     @include size(20vh);
     flex-direction: column;
     border-top:3px dashed $secondary;
+    font-weight: 500;
 }
 
 a {
