--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ footer {
       -ms-flex-direction: column;
           flex-direction: column;
   border-top: 3px dashed #8FDA81;
+  font-weight: 500;
 }
 
 a {
