--- a/styles/style.scss
+++ b/styles/style.scss
@@ -69,11 +69,14 @@ a {
 }
 
 form {
-    font-weight: 200;
-    font-size: clamp(0.75rem, 1.75vw, 1rem);
+    font: {
+        weight: 200;
+        size: clamp(0.75rem, 1.75vw, 1rem);
+    }
     display: flex;
     align-items: center;
     gap:0.5vw;
+    transform: translateY(75%);
     input[type=date], input[type=time] {
         outline: none;
     }
