--- a/styles/style.css
+++ b/styles/style.css
@@ -96,9 +96,22 @@ form input[type=submit] {
   border: none;
   border-radius: 5px;
   height: 1rem;
+  width: 3rem;
 }
 
 form input[type=submit]:hover {
+  background: #8FDA81;
+  color: white;
+}
+
+button {
+  margin: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  width: 5rem;
+}
+
+button:hover {
   background: #8FDA81;
   color: white;
 }
