--- a/styles/style.scss
+++ b/styles/style.scss
@@ -69,6 +69,7 @@ a {
 }
 
 form {
+    transition: all 500ms ease;
     font: {
         weight: 200;
         size: clamp(0.75rem, 1.75vw, 1rem);
@@ -96,7 +97,7 @@ button {
     margin: 0.5rem;
     border: none;
     border-radius: 5px;
-    width:5rem;
+    width:5.5rem;
     &:hover {
         background: $secondary;
         color:$primary;
