--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,8 @@ a:hover {
 }
 
 form {
+  opacity: 0;
+  visibility: hidden;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
   font-weight: 200;
